List is public now

--- a/app/src/main/webapp/index.xhtml
+++ b/app/src/main/webapp/index.xhtml
@@ -17,8 +17,8 @@
 
             <h:form>
                 <h:commandButton styleClass="btn btn-primary" value="Logout" action="#{logoutController.logout}"/>
-                <h:commandButton styleClass="btn btn-primary" value="Dodaj Wpis" action="#{listCategoryController.editList}"/>
-                <h:commandButton styleClass="btn btn-primary" value="Lista Wpisow" action="#{listCategoryController.doorList}"/>
+                <h:commandButton styleClass="btn btn-primary" value="Dodaj Wpis" action="#{pageController.editList}"/>
+                <h:commandButton styleClass="btn btn-primary" value="Lista Wpisow" action="#{pageController.doorList}"/>
             </h:form>
         </ui:define>
     </ui:composition>
