--- a/app/src/main/webapp/start.xhtml
+++ b/app/src/main/webapp/start.xhtml
@@ -13,8 +13,8 @@
 
         <ui:define name="content">
             <h:form>
-                <h:commandButton styleClass="btn btn-primary" value="Zaloguj" action="#{listCategoryController.gotoLogin}"/>
-                <h:commandButton styleClass="btn btn-primary" value="Lista Wpisow" action="#{listCategoryController.doorList}"/>
+                <h:commandButton styleClass="btn btn-primary" value="Zaloguj" action="#{pageController.gotoLogin}"/>
+                <h:commandButton styleClass="btn btn-primary" value="Lista Wpisow" action="#{pageController.doorList}"/>
             </h:form>
         </ui:define>
     </ui:composition>
