Date is now visible when viewing posts

--- a/app/src/main/webapp/samples/doorview.xhtml
+++ b/app/src/main/webapp/samples/doorview.xhtml
@@ -19,9 +19,9 @@
                 <br></br>
                 <h:outputText  value=" #{editDoorController.editRequest.floor}"/>
                 <br></br>
-                <h:outputText  value=" #{editDoorController.editRequest.date}"/>
+                <h:outputText  value="Data:  #{editDoorController.editRequest.date}"/>
                 <br></br>
-                <h:outputText  value=" #{editDoorController.editRequest.author}"/>
+                <h:outputText  value="Autor:  #{editDoorController.editRequest.author}"/>
             </div>
         </ui:define>
 
