--- a/app/src/main/webapp/login.xhtml
+++ b/app/src/main/webapp/login.xhtml
@@ -27,6 +27,8 @@
                     </div>
                     <h:commandButton styleClass="btn btn-primary" value="Login" action="#{loginController.login}"/><br/>
                     <h:outputLink styleClass="small" value="register.xhtml">Signup</h:outputLink>
+                    <br></br>
+                    <h:outputLink styleClass="small" value="start.xhtml">Nie loguj się</h:outputLink>
                 </h:form>
             </div>
         </ui:define>
