--- a/app/src/main/webapp/start.xhtml
+++ b/app/src/main/webapp/start.xhtml
@@ -14,7 +14,7 @@
         <ui:define name="content">
             <h:form>
                 <h:commandButton styleClass="btn btn-primary" value="Zaloguj" action="#{pageController.gotoLogin}"/>
-                <h:commandButton styleClass="btn btn-primary" value="Lista Wpisow" action="#{pageController.doorList}"/>
+                <h:commandButton styleClass="btn btn-primary" value="Lista Wpisow" action="#{pageController.entryList}"/>
             </h:form>
         </ui:define>
     </ui:composition>
